// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton className="kebabMenuButton" ariaLabel="More actions" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported 2`] = `
{
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": [
    {
      "iconProps": {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "onClick": [Function],
      "text": "File issue",
    },
    {
      "iconProps": {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported and test-kebabmenuarialabel aria label passed as prop: action button menu props 1`] = `
{
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": [
    {
      "iconProps": {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "onClick": [Function],
      "text": "File issue",
    },
    {
      "iconProps": {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported and test-kebabmenuarialabel aria label passed as prop: component-snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton className="kebabMenuButton" ariaLabel="test-kebabmenuarialabel" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported and undefined aria label passed as prop: action button menu props 1`] = `
{
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": [
    {
      "iconProps": {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "onClick": [Function],
      "text": "File issue",
    },
    {
      "iconProps": {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported and undefined aria label passed as prop: component-snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton className="kebabMenuButton" ariaLabel="More actions" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton className="kebabMenuButton" ariaLabel="More actions" menuIconProps={{...}} menuProps={{...}} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported 2`] = `
{
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": [
    {
      "iconProps": {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;
